--- a/serverStack.yml
+++ b/serverStack.yml
@@ -52,6 +52,7 @@ Parameters:
       - db.t4g.large
       - db.m6gd.xlarge
       - db.m5d.xlarge
+      - db.t3.micro
   
   instanceType:
     Type: String
@@ -93,6 +94,26 @@ Mappings:
       web: ami-0ee679ef733e3b8e7
       app: ami-017f4811a06d3e510
 Resources:
+  # NasDb:
+  #   Type: AWS::RDS::DBInstance
+  #   Properties:
+  #     DBName:
+  #       Ref: DBName
+  #     Engine: MySQL
+  #     MasterUsername:
+  #       Ref: DBUsername
+  #     DBInstanceClass:
+  #       Ref: DBInstanceType
+  #     DBSubnetGroupName:
+  #       Fn::ImportValue:
+  #         !Sub "${NetWorkStack}-db-SubnetGroupName"
+  #     VPCSecurityGroups:
+  #       - Fn::ImportValue:
+  #           !Sub "${NetWorkStack}-RdsSgId"
+  #     AllocatedStorage: 200
+  #     MasterUserPassword:
+  #       Ref: DBPassword
+
   NasDb:
     Type: AWS::RDS::DBCluster
     Properties:
@@ -305,39 +326,40 @@ Resources:
             Key: "routing.http.drop_invalid_header_fields.enabled"
             Value: "false"
 
-  ElbListener:
-    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+  HTTPSListener:
+    Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
-      DefaultActions:
-        - Type: forward
-          TargetGroupArn: !Ref ELBTargetGroup
-      LoadBalancerArn: !Ref FrontEndAlb
-      Port: 80
-      Protocol: HTTP
-
-  # HTTPSListener:
-  #   Type: "AWS::ElasticLoadBalancingV2::Listener"
-  #   Properties:
-  #       LoadBalancerArn: !Ref ApplicationLoadBalancer
-  #       Port: 443
-  #       Protocol: "HTTPS"
-  #       SslPolicy: "ELBSecurityPolicy-2016-08"
-  #       # Certificates: 
-  #       #   - 
-  #       #     CertificateArn: arn:aws:acm:eu-central-1:**************:certificate/*********************
+        LoadBalancerArn: !Ref FrontEndAlb
+        Port: 443
+        Protocol: "HTTPS"
+        SslPolicy: "ELBSecurityPolicy-2016-08"
+        Certificates: 
+          - CertificateArn: arn:aws:acm:us-west-2:362013628963:certificate/9765d442-d0f7-4f1b-abe4-a3fb440d6234
             
-  #       DefaultActions: 
-  #         - 
-  #           Order: 1
-  #           TargetGroupArn: !Ref Test1TargetGroup
-  #           Type: "forward"
-  # ElbListener:
-  #   Type: 'AWS::ElasticLoadBalancingV2::Listener'
-  #   Properties:
-  #     DefaultActions:
-  #       - Type: forward
-  #         TargetGroupArn: !Ref ELBTargetGroup
-  #     LoadBalancerArn: !Ref FrontEndAlb
-  #     Port: 80
-  #     Protocol: HTTP
+        DefaultActions: 
+          - Order: 1
+            TargetGroupArn: !Ref ELBTargetGroup
+            Type: "forward"
+  HTTPlistener:
+   Type: "AWS::ElasticLoadBalancingV2::Listener"
+   Properties:
+     DefaultActions:
+       - Type: "redirect"
+         RedirectConfig:
+           Protocol: "HTTPS"
+           Port: 443
+          #  Host: "#{host}"
+          #  Path: "/#{path}"
+          #  Query: "#{query}"
+           StatusCode: "HTTP_301"
+     LoadBalancerArn: !Ref FrontEndAlb
+     Port: 80
+     Protocol: "HTTP"
+
+Outputs:
+  FrontAlbDns:
+    Description: A reference to the dns name of the front end LB
+    Value: !GetAtt FrontEndAlb.DNSName
+    Export:
+      Name: !Sub '${AWS::StackName}-DnsName'
   
