--- a/serverStack.yml
+++ b/serverStack.yml
@@ -2,19 +2,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: This template containts the configuration details of deploying a highly available application server
 Parameters:
-    # environment:
-    # Type: String
-    # Default: development
-    # AllowedValues:
-    #   - production
-    #   - development
-    # owner:
-    #   Type: String
-    #   Default: "Fox-Cluster"
-    # ownerEmail:
-    #   Type: String
-    #   Default: foxcluster@gmail.com
-    
   DBName:
     Description: Database Initial name
     Type: String
@@ -30,6 +17,10 @@ Parameters:
     ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
     Default: nasadmin
   
+  NasLeopardParameter:
+    Type: "AWS::SSM::Parameter::Value<String>"
+    Default: nasSSLCertificateALB
+
   DBPassword:
     NoEcho: 'true'
     Description: Password for database access
@@ -52,7 +43,6 @@ Parameters:
       - db.t4g.large
       - db.m6gd.xlarge
       - db.m5d.xlarge
-      - db.t3.micro
   
   instanceType:
     Type: String
@@ -60,8 +50,9 @@ Parameters:
     AllowedValues:
       - t2.micro
       - t2.nano
-      - m1.small
-      - m1.large
+      - t2.small
+      - t2.medium
+      - t2.xlarge
     Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
   
   NetWorkStack:
@@ -94,26 +85,6 @@ Mappings:
       web: ami-0ee679ef733e3b8e7
       app: ami-017f4811a06d3e510
 Resources:
-  # NasDb:
-  #   Type: AWS::RDS::DBInstance
-  #   Properties:
-  #     DBName:
-  #       Ref: DBName
-  #     Engine: MySQL
-  #     MasterUsername:
-  #       Ref: DBUsername
-  #     DBInstanceClass:
-  #       Ref: DBInstanceType
-  #     DBSubnetGroupName:
-  #       Fn::ImportValue:
-  #         !Sub "${NetWorkStack}-db-SubnetGroupName"
-  #     VPCSecurityGroups:
-  #       - Fn::ImportValue:
-  #           !Sub "${NetWorkStack}-RdsSgId"
-  #     AllocatedStorage: 200
-  #     MasterUserPassword:
-  #       Ref: DBPassword
-
   NasDb:
     Type: AWS::RDS::DBCluster
     Properties:
@@ -181,7 +152,7 @@ Resources:
       FileSystemId: !Ref FileSystemResource
       SubnetId:
         Fn::ImportValue:
-          Fn::Sub: "${NetWorkStack}-PublicsubnetOneId"
+          Fn::Sub: "${NetWorkStack}-PrivateSubnetOneId"
       SecurityGroups:
       - Fn::ImportValue:
           Fn::Sub: "${NetWorkStack}-EfsSgId"
@@ -192,7 +163,7 @@ Resources:
       FileSystemId: !Ref FileSystemResource
       SubnetId:
         Fn::ImportValue:
-          Fn::Sub: "${NetWorkStack}-PublicsubnetTwoId"
+          Fn::Sub: "${NetWorkStack}-PrivateSubnetTwoId"
       SecurityGroups:
       - Fn::ImportValue:
           Fn::Sub: "${NetWorkStack}-EfsSgId"
@@ -203,18 +174,23 @@ Resources:
       FileSystemId: !Ref FileSystemResource
       SubnetId:
         Fn::ImportValue:
-          Fn::Sub: "${NetWorkStack}-PublicsubnetThreeId"
+          Fn::Sub: "${NetWorkStack}-PrivateSubnetThreeId"
       SecurityGroups:
       - Fn::ImportValue:
           Fn::Sub: "${NetWorkStack}-EfsSgId"
 
-# Launch Template
-  NaslaunchTemplate:
+# Frontend Launch Template
+  nasFrontendLT:
     Type: AWS::EC2::LaunchTemplate
     DependsOn: [FileSystemResource, key, MountTargetResource1, MountTargetResource2, MountTargetResource3, NasDb]
     Properties:
-      LaunchTemplateName: frontend-web-LT 
+      LaunchTemplateName: frontend-web-LT
       LaunchTemplateData:
+        TagSpecifications:
+          - ResourceType: instance
+            Tags:
+              - Key: Name
+                Value: leopard-nas-FrontEnd-Server
         IamInstanceProfile:
           Arn:
             Fn::ImportValue:
@@ -250,7 +226,7 @@ Resources:
             sed -i "s/localhost/${NasDb.Endpoint.Address}/g" /var/www/html/wp-config.php
             amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2
             systemctl restart httpd
-             
+  
   # AutoScaling Group
   NasASG:
     Type: AWS::AutoScaling::AutoScalingGroup
@@ -260,8 +236,8 @@ Resources:
     Properties:
       AutoScalingGroupName: frontend-web-ASG
       LaunchTemplate:
-        LaunchTemplateId: !Ref NaslaunchTemplate
-        Version: !GetAtt NaslaunchTemplate.LatestVersionNumber
+        LaunchTemplateId: !Ref nasFrontendLT
+        Version: !GetAtt nasFrontendLT.LatestVersionNumber
       MaxSize: '5'
       MinSize: '1'
       DesiredCapacity: '3'
@@ -290,7 +266,7 @@ Resources:
           Fn::Sub: "${NetWorkStack}-VPCID"
       TargetType: instance
 
-# Load Balanacer
+# FrontEnd Load Balanacer
   FrontEndAlb:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
@@ -326,6 +302,19 @@ Resources:
             Key: "routing.http.drop_invalid_header_fields.enabled"
             Value: "false"
 
+  ElbListener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      DefaultActions:
+        - Type: redirect
+          RedirectConfig:
+            Protocol: HTTPS
+            Port: 443
+            StatusCode: HTTP_301
+      LoadBalancerArn: !Ref FrontEndAlb
+      Port: 80
+      Protocol: HTTP
+        
   HTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -334,32 +323,216 @@ Resources:
         Protocol: "HTTPS"
         SslPolicy: "ELBSecurityPolicy-2016-08"
         Certificates: 
-          - CertificateArn: arn:aws:acm:us-west-2:362013628963:certificate/9765d442-d0f7-4f1b-abe4-a3fb440d6234
-            
+          - CertificateArn: !Ref NasLeopardParameter  
         DefaultActions: 
           - Order: 1
             TargetGroupArn: !Ref ELBTargetGroup
             Type: "forward"
-  HTTPlistener:
-   Type: "AWS::ElasticLoadBalancingV2::Listener"
-   Properties:
-     DefaultActions:
-       - Type: "redirect"
-         RedirectConfig:
-           Protocol: "HTTPS"
-           Port: 443
-          #  Host: "#{host}"
-          #  Path: "/#{path}"
-          #  Query: "#{query}"
-           StatusCode: "HTTP_301"
-     LoadBalancerArn: !Ref FrontEndAlb
-     Port: 80
-     Protocol: "HTTP"
 
-Outputs:
-  FrontAlbDns:
-    Description: A reference to the dns name of the front end LB
-    Value: !GetAtt FrontEndAlb.DNSName
+# S3 Bucket Static website
+  nasBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      AccessControl: PublicRead
+      BucketName: www.leopard.nasfinancialgroup.com
+      CorsConfiguration:
+        CorsRules:
+        - AllowedHeaders:
+          - "*"
+          AllowedMethods:
+          - GET
+          AllowedOrigins:
+          - "*"
+          Id: Staticweb
+          MaxAge: 60
+      WebsiteConfiguration:
+        IndexDocument: index.html
+        ErrorDocument: error.html
+
+  nasBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref nasBucket
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Action:
+              - 's3:GetObject'
+            Effect: Allow
+            Resource: !Join
+              - ''
+              - - 'arn:aws:s3:::'
+                - !Ref nasBucket
+                - /*
+            Principal: '*'
+
+# INTRANET (BACKEND WEBSERVER) CONFIGURATION
+
+  nasBackendLT:
+    Type: AWS::EC2::LaunchTemplate
+    DependsOn: [FileSystemResource, key, MountTargetResource1, MountTargetResource2, MountTargetResource3, NasDb]
+    Properties:
+      LaunchTemplateName: backend-web-LT
+      LaunchTemplateData:
+        TagSpecifications:
+          - ResourceType: instance
+            Tags:
+              - Key: Name
+                Value: leopard-nas-BackEnd-Server
+        IamInstanceProfile:
+          Arn:
+            Fn::ImportValue:
+              !Sub '${PermissionStack}-Arn'
+        DisableApiTermination: true
+        ImageId:
+          !FindInMap [RegionMap, !Ref AWS::Region, web]
+        InstanceType: !Ref instanceType
+        KeyName: !Ref KeyName
+        SecurityGroupIds:
+          - Fn::ImportValue:
+              Fn::Sub: "${NetWorkStack}-BackWebSgId"
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash
+            sudo su
+            mkdir /var/www/
+            mkdir /var/www/html
+            sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport ${FileSystemResource}.efs.${AWS::Region}.amazonaws.com:/ /var/www/html/
+            yum install -y amazon-efs-utils
+            echo "${FileSystemResource}.efs.${AWS::Region}.amazonaws.com:/ /var/www/html/ efs defaults,_netdev 0 0" >> /etc/fstab
+            yum install -y httpd
+            systemctl start httpd
+            systemctl enable httpd
+            systemctl status httpd
+            wget https://wordpress.org/latest.tar.gz
+            tar -xzf latest.tar.gz
+            cp -r wordpress/* /var/www/html/
+            cp wordpress/wp-config-sample.php /var/www/html/wp-config.php
+            sed -i "s/database_name_here/${DBName}/g" /var/www/html/wp-config.php
+            sed -i "s/username_here/${DBUsername}/g" /var/www/html/wp-config.php
+            sed -i "s/password_here/${DBPassword}/g" /var/www/html/wp-config.php
+            sed -i "s/localhost/${NasDb.Endpoint.Address}/g" /var/www/html/wp-config.php
+            amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2
+            systemctl restart httpd
+
+#   BackEnd AutoScaling Group
+  nasBackendASG:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    DependsOn:
+      - BackendELBTargetGroup
+      - BackEndAlb
+    Properties:
+      AutoScalingGroupName: backend-web-ASG
+      LaunchTemplate:
+        LaunchTemplateId: !Ref nasBackendLT
+        Version: !GetAtt nasBackendLT.LatestVersionNumber
+      MaxSize: '5'
+      MinSize: '1'
+      DesiredCapacity: '3'
+      VPCZoneIdentifier:
+        - Fn::ImportValue:
+              Fn::Sub: "${NetWorkStack}-PrivateSubnetOneId"
+        - Fn::ImportValue:
+            Fn::Sub: "${NetWorkStack}-PrivateSubnetTwoId"
+        - Fn::ImportValue:
+            Fn::Sub: "${NetWorkStack}-PrivateSubnetThreeId"
+      TargetGroupARNs:
+        - !Ref BackendELBTargetGroup
+
+#   BackEnd Target Group
+  BackendELBTargetGroup:
+    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
+    Properties:
+      HealthCheckIntervalSeconds: 30
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      Port: 80
+      Protocol: HTTP
+      UnhealthyThresholdCount: 2
+      VpcId: 
+        Fn::ImportValue:
+          Fn::Sub: "${NetWorkStack}-VPCID"
+      TargetType: instance
+
+# Backend Load Balanacer
+  BackEndAlb:
+    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
+    Properties:
+      Name: "BackEndAlb"
+      Scheme: "internal"
+      Type: "application"
+      Subnets:
+        - Fn::ImportValue:
+            Fn::Sub: "${NetWorkStack}-PrivateSubnetOneId"
+        - Fn::ImportValue:
+            Fn::Sub: "${NetWorkStack}-PrivateSubnetTwoId"
+        - Fn::ImportValue:
+            Fn::Sub: "${NetWorkStack}-PrivateSubnetThreeId"
+      SecurityGroups:
+        - Fn::ImportValue:
+            Fn::Sub: "${NetWorkStack}-BackAlbSgId" 
+        
+      IpAddressType: "ipv4"
+      LoadBalancerAttributes: 
+        - 
+          Key: "access_logs.s3.enabled"
+          Value: "false"
+        - 
+          Key: "idle_timeout.timeout_seconds"
+          Value: "60"
+        - 
+          Key: "deletion_protection.enabled"
+          Value: "false"
+        - 
+          Key: "routing.http2.enabled"
+          Value: "true"
+        - 
+          Key: "routing.http.drop_invalid_header_fields.enabled"
+          Value: "false"
+
+#   Backend ELB Listener
+
+  BackendElbListener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref BackendELBTargetGroup
+      LoadBalancerArn: !Ref BackEndAlb
+      Port: 80
+      Protocol: HTTP
+
+Outputs: 
+  FrontEndAlbDNSName:
+    Description: A reference to the security group of the webserver in the private subnet
+    Value: !GetAtt FrontEndAlb.DNSName 
     Export:
-      Name: !Sub '${AWS::StackName}-DnsName'
+      Name: !Sub '${AWS::StackName}-AlbDNS'
+
+  nasBucketURL:
+    Description: A reference to the bucket website url
+    Value: !GetAtt nasBucket.WebsiteURL 
+    Export:
+      Name: !Sub '${AWS::StackName}-WebsiteURL'
+
+  nasBucketDomainName:
+    Description: A reference to the bucket website DomainName
+    Value: !GetAtt nasBucket.DomainName 
+    Export:
+      Name: !Sub '${AWS::StackName}-DomainName'
+
+  nasBucketRDomainName:
+    Description: A reference to the bucket website RegionalDomainName
+    Value: !GetAtt nasBucket.RegionalDomainName 
+    Export:
+      Name: !Sub '${AWS::StackName}-RegionalDomainName'
+
+  nasBucketArn:
+    Description: A reference to the bucket website url
+    Value: !Ref nasBucket
+    Export:
+      Name: !Sub '${AWS::StackName}-WebsiteArn'
+  
+           
+  
   
